Clear needs_resize_ack when clearing DeviceMetricsOverride.

BUG=635560

Review-Url: https://codereview.chromium.org/2228543002
Cr-Commit-Position: refs/heads/master@{#410389}

Former-commit-id: 722fb6bcbfc14db35e0b8a5546c9778827e7387c